[project]
name = "mcp-tutorial-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.16",
    "lxml>=5.3.1",
    "matplotlib>=3.10.1",
    "mcp[cli]>=1.4.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "regex>=2024.11.6",
    "scikit-learn>=1.6.1",
]
